# rust-file-system-indexer

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/TODO Changes/archive/: perf-indexer-pipeline.md  step-1-storage.md  step-2-database.md  step-3-chunker.md  step-4-indexer.md  step-5-search.md  step-6-index-progress.md  step-7-stats-enhancements.md  step-9-self-healing-indexer.md
docs/adr/: ADR-001-push-streamed-ingestion.md
docs/archive/: step-8-tui.md
docs/dogfooding/: 2026-06-22-dogfood-run.md
src/: chunker.rs  chunker_map.rs  db.rs  error.rs  indexer.rs  main.rs  scorer.rs  search.rs  storage.rs  tui.rs
